WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
72950
[DRT Chromium] Set right default value to baseURL in LayoutTestController::queueLoadHTMLString
https://bugs.webkit.org/show_bug.cgi?id=72950
Summary
[DRT Chromium] Set right default value to baseURL in LayoutTestController::qu...
Johnny(Jianning) Ding
Reported
2011-11-22 06:28:02 PST
fast/loader/non-deferred-substitute-load.html was crashed on the debug version of DRT Chromium port. The crash was caused by ASSERT(!newRequest.isNull()) in MainResourceLoader::willSendRequest. After investigation, test non-deferred-substitute-load.html calls LayoutTestController::queueLoadHTMLString to load some HTML contents, however DRT Chromium port sets a empty URL as default base URL in LayoutTestController::queueLoadHTMLString, which causes the assert. By looking at the general DRT implementation, (see
http://trac.webkit.org/browser/trunk/Tools/DumpRenderTree/LayoutTestController.cpp#L1016
.) it sets a "" string as default value to baseURL to avoid the assert, DRT Chromium port should follow it. A patch is on the way
Attachments
patch v1
(2.84 KB, patch)
2011-11-22 06:33 PST
,
Johnny(Jianning) Ding
tony
: review+
Details
Formatted Diff
Diff
patch v1 with addressing tony's nit.
(2.75 KB, patch)
2011-11-22 19:17 PST
,
Johnny(Jianning) Ding
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Johnny(Jianning) Ding
Comment 1
2011-11-22 06:33:47 PST
Created
attachment 116216
[details]
patch v1
Tony Chang
Comment 2
2011-11-22 09:35:27 PST
Comment on
attachment 116216
[details]
patch v1 View in context:
https://bugs.webkit.org/attachment.cgi?id=116216&action=review
> Tools/DumpRenderTree/chromium/LayoutTestController.cpp:575 > + // FIXME: Should use the URL of current document as default if it is specified?
Nit: I would remove this comment since it seems like this is intentional.
Johnny(Jianning) Ding
Comment 3
2011-11-22 19:17:11 PST
Created
attachment 116307
[details]
patch v1 with addressing tony's nit.
WebKit Review Bot
Comment 4
2011-11-23 06:12:29 PST
Comment on
attachment 116307
[details]
patch v1 with addressing tony's nit. Clearing flags on attachment: 116307 Committed
r101076
: <
http://trac.webkit.org/changeset/101076
>
WebKit Review Bot
Comment 5
2011-11-23 06:12:33 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug