Set right default value to baseURL in LayoutTestController::queueLoadHTMLString. https://bugs.webkit.org/show_bug.cgi?id=72950

Reviewed by Tony Chang.

Tools:

* DumpRenderTree/chromium/LayoutTestController.cpp:
(LayoutTestController::queueLoadHTMLString):

LayoutTests:

* platform/chromium/test_expectations.txt:


Canonical link: https://commits.webkit.org/89559@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101076 268f45cc-cd09-0410-ab3c-d52691b4dbfc